src/snapshots/rlox__parse__tests__missing_parens.snap
---
source: src/parse.rs
expression: "crate::util::mock_interpret(\"print ((1);\\n\")"
---
stdout:


stderr:
Error: 
   ╭─[<unknown>:1:13]
   │
 1 │ print ((1);
   │       ┬   ┬  
   │       ╰────── This ( is unmatched
   │           │  
   │           ╰── There should be a ) here
───╯


